{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 105,
  "lineage": "5b26c0fe-a2ca-ad5f-c7e9-745de4356a24",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01a52e548b00db4cc",
            "domain": "vpc",
            "id": "eipalloc-03743740b28480a07",
            "instance": "i-01a20cbe2feb0e115",
            "network_interface": "eni-055a64e40289b0362",
            "private_dns": "ip-198-168-10-11.us-east-2.compute.internal",
            "private_ip": "198.168.10.11",
            "public_dns": "ec2-3-20-67-60.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.67.60",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic IP Nahuel EKS"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nahuel-server1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5d9d301c853a04a",
            "arn": "arn:aws:ec2:us-east-2:492572753794:instance/i-01a20cbe2feb0e115",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01a20cbe2feb0e115",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "nahuel_class_key1",
            "monitoring": false,
            "primary_network_interface_id": "eni-055a64e40289b0362",
            "private_dns": "ip-198-168-10-11.us-east-2.compute.internal",
            "private_ip": "198.168.10.11",
            "public_dns": "ec2-3-20-67-60.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.67.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ca84225dcc0b2249",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c52fd24c798b91d0",
            "tags": {
              "Env": "dev",
              "Name": "Nahuel EKS",
              "Owner": "Curso Kubernetes"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b8943989be9b2b0"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_key_pair.key-class-1",
            "aws_security_group.route_allow_http_ssh",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-05907ed9681ecce6b",
            "owner_id": "492572753794",
            "tags": {
              "Name": "VPC Main curso EKS"
            },
            "vpc_id": "vpc-03f9ec8676e632088"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0188af500f187a794",
            "owner_id": "492572753794",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05907ed9681ecce6b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet RT, curso EKS"
            },
            "vpc_id": "vpc-03f9ec8676e632088"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f973596dcf5e4e29",
            "route_table_id": "rtb-0188af500f187a794",
            "subnet_id": "subnet-0c52fd24c798b91d0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web-public-rt",
            "aws_subnet.subnet1",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0116b1ed5913ce103",
            "route_table_id": "rtb-0188af500f187a794",
            "subnet_id": "subnet-0f392878d5375ebb6"
          },
          "dependencies": [
            "aws_route_table.web-public-rt",
            "aws_subnet.subnet2",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "route_allow_http_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492572753794:security-group/sg-09b8943989be9b2b0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b8943989be9b2b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3977,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3977
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "route53_allow_ping_shh_apache",
            "name_prefix": null,
            "owner_id": "492572753794",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03f9ec8676e632088"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492572753794:subnet/subnet-0c52fd24c798b91d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "198.168.10.0/24",
            "id": "subnet-0c52fd24c798b91d0",
            "map_public_ip_on_launch": false,
            "owner_id": "492572753794",
            "tags": {
              "Name": "Nahuel EKS subnet-1"
            },
            "vpc_id": "vpc-03f9ec8676e632088"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492572753794:subnet/subnet-0f392878d5375ebb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "198.168.20.0/24",
            "id": "subnet-0f392878d5375ebb6",
            "map_public_ip_on_launch": false,
            "owner_id": "492572753794",
            "tags": {
              "Name": "Nahuel subnet2"
            },
            "vpc_id": "vpc-03f9ec8676e632088"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492572753794:subnet/subnet-01bd4c5287168c391",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "198.168.30.0/24",
            "id": "subnet-01bd4c5287168c391",
            "map_public_ip_on_launch": false,
            "owner_id": "492572753794",
            "tags": {
              "Name": "Nahuel subnet3"
            },
            "vpc_id": "vpc-03f9ec8676e632088"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492572753794:vpc/vpc-03f9ec8676e632088",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "198.168.0.0/16",
            "default_network_acl_id": "acl-0141550fa22b9a087",
            "default_route_table_id": "rtb-0904e2c87358c8eb1",
            "default_security_group_id": "sg-0c4b4bb26c9df30e1",
            "dhcp_options_id": "dopt-2907c440",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03f9ec8676e632088",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0904e2c87358c8eb1",
            "owner_id": "492572753794",
            "tags": {
              "Location": "US",
              "Name": "VPC curso Kubernetes - Nahuel"
            }
          }
        }
      ]
    }
  ]
}